--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "dev": "ts-node-dev --respawn src/server.ts",
-     "test": "jest"
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,11 @@
     "openai": "^5.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.2",
