--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongo:
     image: mongo
@@ -10,15 +8,15 @@ services:
       - mongo-data:/data/db
 
   backend:
-    build: ./backend
+    build: .
     container_name: backend
     ports:
       - "3000:3000"
     volumes:
-      - ./backend:/app
+      - .:/app
     environment:
-      - MONGO_URI=mongodb://mongo:27017
-      - OPENAI_API_KEY=SUA_CHAVE_AQUI
+      - MONGO_URI=${MONGO_URI}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       - mongo
 
