--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
       "target": "ES2020",
-      "module": "commonjs",
-      "rootDir": "./src",
-      "outDir": "./dist",
+      "module": "CommonJS",
+      "moduleResolution": "Node",
+      "strict": true,
       "esModuleInterop": true,
-      "strict": true
-    }
+      "forceConsistentCasingInFileNames": true,
+      "skipLibCheck": true,
+      "resolveJsonModule": true,
+      "outDir": "dist",
+      "rootDir": "src"
+    },
+    "include": ["src"]
   }
   
