--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "openai": "^5.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
@@ -28,10 +30,13 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.3",
     "@types/supertest": "^6.0.3",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
     "jest": "^30.0.2",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   }
 }
